[gd_scene load_steps=4 format=3 uid="uid://btcewp0he1uai"]

[ext_resource type="Texture2D" uid="uid://bpiu8f52st6a1" path="res://icon.svg" id="2_m8k08"]
[ext_resource type="Script" uid="uid://b15fdj38augl6" path="res://drag.gd" id="2_qx3ce"]
[ext_resource type="Script" uid="uid://dgdrwfi6abxea" path="res://electric_field.gd" id="3_qx3ce"]

[node name="Node2D" type="Node2D"]

[node name="PositiveCharge1" type="Sprite2D" parent="."]
position = Vector2(409, 503)
scale = Vector2(-0.394944, 0.384615)
texture = ExtResource("2_m8k08")
script = ExtResource("2_qx3ce")

[node name="PositiveCharge2" type="Sprite2D" parent="."]
position = Vector2(913, 117)
scale = Vector2(0.429688, 0.40625)
texture = ExtResource("2_m8k08")
script = ExtResource("2_qx3ce")

[node name="ElectricField" type="Node2D" parent="."]
script = ExtResource("3_qx3ce")

[node name="HSlider_Charge1" type="HSlider" parent="."]
offset_left = 29.0
offset_top = 17.0
offset_right = 246.0
offset_bottom = 33.0
min_value = -20.0
max_value = 20.0

[node name="HSlider_Charge2" type="HSlider" parent="."]
offset_left = 29.0
offset_top = 43.0
offset_right = 246.0
offset_bottom = 59.0
min_value = -20.0
max_value = 20.0

[connection signal="value_changed" from="HSlider_Charge1" to="ElectricField" method="_on_h_slider_charge_1_value_changed"]
[connection signal="value_changed" from="HSlider_Charge2" to="ElectricField" method="_on_h_slider_charge_2_value_changed"]
